[#S11P21S004-372] [BE] style: 공백제거 등 warning 제거